--- a/pgp/README
+++ b/pgp/README
@@ -20,3 +20,8 @@ lookup even if the key exists on the local keyring, enabling refreshes:
 
 
 Anyone with an email address in the `nats.io` domain can have a PGP key added here.
+
+Beware that the build-system used for the production website might not have a
+current version of the GnuPG command available and we can't do much about that;
+as of 2020-08, we know that Ed25519 keys broke it.  Please stick to RSA keys
+for now.
